# ComfyUI-Prompt-Wildcards

./: .gitignore  README-zh.md  README.md  __init__.py  logging.py  nodes.py  pyproject.toml
example/: ComfyUI-Prompt-Wildcards.json  makiwildcards-example.json
example_workflows/: ComfyUI-Prompt-Wildcards.json  ComfyUI-Prompt-Wildcards1.json  ComfyUI-Prompt-Wildcards2.json
js/: text.js  utils.js  widgethider.js
wildcards/: makki_300artists.txt  negativeprompt.txt  test.yaml  人文景观-室内.txt  人文景观-室外.txt  人文景观-建筑.txt  人文景观-背景.txt  人物-动作.txt  人物-头发.txt  人物-摆位.txt  人物-眼睛.txt  人物-类型.txt  人物-耳朵.txt  人物-胸部.txt  人物-脖子.txt  人物-衣服.txt  人物-装饰-上身.txt  人物-装饰-下身.txt  人物-装饰-头部.txt  人物-装饰-身体.txt  人物-面部.txt  人物-鞋袜.txt  构图-效果.txt  构图-构图方式.txt  构图-画风.txt  构图-视角.txt  构图-风格转换.txt  物品.txt  自然景观-场景.txt  自然景观-天象.txt  自然景观-花卉.txt  色彩.txt
