[project]
name = "comfyui_prompt_wildcards"
description = "Optional wildcards in ComfyUI"
version = "2.1.5"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MakkiShizu/ComfyUI-Prompt-Wildcards"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "makki-shizu"
DisplayName = "ComfyUI-Prompt-Wildcards"
Icon = ""
